fixing styling on user dash and home page correctly only accessing assessment info from current assessment for topbar when only on the questions page, and not any other pages user dash divs were out of order, so styling fixed on those now depending on screen width the assessment list divs will show automatically if screen is bigger, hide if screen is small. bases this off screen width not window width so currently it shows the divs when im in mobile mode using inspect but not sure if people will do that typically (hope not) and if they do its not that big of a deal, just automatically shows doesnt mess up styling

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -205,7 +205,7 @@ $input-border:#dcdcdc;
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 	.assessment-name {
-		margin-left: 0;
+		margin-left: 15px;
 	}
 	.target-level {
 		margin-top: 2%;
